prodMetadata/src/objects/Location__c.object
<CustomObject>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Latitude__c</fullName>
        <label>Latitude</label>
        <precision>8</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Local_Political_Leadership__c</fullName>
        <inlineHelpText>Populated by Research team</inlineHelpText>
        <label>Local Political Leadership</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Longitude__c</fullName>
        <label>Longitude</label>
        <precision>8</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MaxLat__c</fullName>
        <formula>Latitude__c + Radius_for_Searches__c /69</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MaxLat</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MaxLong__c</fullName>
        <formula>Longitude__c + Radius_for_Searches__c /69</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MaxLong</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MinLat__c</fullName>
        <formula>Latitude__c - Radius_for_Searches__c /69</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MinLat</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MinLong__c</fullName>
        <formula>Longitude__c - Radius_for_Searches__c /69</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MinLong</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Other_Relevant_Local_Stats__c</fullName>
        <inlineHelpText>Populated by Research team for situational awareness and additional context</inlineHelpText>
        <label>Other Relevant Local Stats</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Radius_for_Searches__c</fullName>
        <label>Radius for Searches</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Top_Donor_Minimum__c</fullName>
        <inlineHelpText>DON&apos;T INCLUDE COMMAS - minimum donation amount that you want to appear on the reports</inlineHelpText>
        <label>Top Donor Minimum</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Iraq_and_Afghanistan_Population__c</fullName>
        <inlineHelpText>Total Iraq and Afghanistan Population, not limited to our members, field populated by Research team</inlineHelpText>
        <label>Total Iraq and Afghanistan Population</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Vet_Population__c</fullName>
        <inlineHelpText>All Eras, not just our database, Populated by Research Team</inlineHelpText>
        <label>Total Vet Population</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Zip_Display__c</fullName>
        <formula>IF ( Zip_Length__c =4, 
(&quot;0&quot;&amp;   TEXT(Zip__c)),
TEXT(Zip__c))</formula>
        <label>Zip Display</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip_Length__c</fullName>
        <formula>LEN( TEXT(Zip__c) )</formula>
        <label>Zip Length</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Zip__c</fullName>
        <label>Zip</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Location</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Latitude__c</columns>
        <columns>Longitude__c</columns>
        <columns>Zip_Display__c</columns>
        <columns>Radius_for_Searches__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Location Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Locations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>